fixed broken styles

--- a/src/components/chat-box/chatbox.module.css
+++ b/src/components/chat-box/chatbox.module.css
@@ -12,12 +12,6 @@
   align-items: center;
 }
 
-h1 {
-  color: black;
-  margin-bottom: 5px;
-}
-
-
 .prompt_input {
 	width: 100%;
 	resize: none;
