--- a/src/components/learnly-prompt/learnlyprompt.module.css
+++ b/src/components/learnly-prompt/learnlyprompt.module.css
@@ -1,8 +1,6 @@
 .prompt_container { 
 	display: flex;
 	flex-direction: column;
-	width: 50%;
-	height: 50%;
 	border-radius: 1rem;
 	border: 1px solid lightgrey;
 	padding: 1rem;
